[package]
name = "cargo-asm"
version = "0.1.13"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
description = "A cargo subcommand that displays the generated assembly of Rust source code."
license = "MIT/Apache-2.0"
repository = "https://github.com/gnzlbg/cargo-asm"
homepage = "https://github.com/gnzlbg/cargo-asm"
readme = "readme.md"

[badges]
appveyor = { repository = "gnzlbg/cargo-asm" }
travis-ci = { repository = "gnzlbg/cargo-asm" }
is-it-maintained-issue-resolution = { repository = "gnzlbg/cargo-asm" }
is-it-maintained-open-issues = { repository = "gnzlbg/cargo-asm" }
maintenance = { status = "experimental" }

[[bin]]
name = "cargo-asm"
path = "src/main.rs"

[[bin]]
name = "cargo-llvm-ir"
path = "src/main.rs"

[dependencies]
structopt = "0.2.*"
walkdir = "2.*"
rustc-demangle = "0.1.*"
termcolor = "0.3.*"
edit-distance = "2.*"
serde = "1.*"
serde_json = "1.*"
serde_derive = "1.*"
log = "0.4.*"
lazy_static = "1.*"
parking_lot = "0.5.*"

[dev-dependencies]
assert_cli = "0.5"