[package]
name = "cargo-asm"
edition = "2018"
version = "0.1.17"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
description = "A cargo subcommand that displays the generated assembly of Rust source code."
license = "MIT/Apache-2.0"
repository = "https://github.com/gnzlbg/cargo-asm"
homepage = "https://github.com/gnzlbg/cargo-asm"
readme = "readme.md"
categories = ["development-tools::cargo-plugins", "development-tools::debugging" ]
keywords = ["assembly", "llvm-ir", "plugins", "cargo", "subcommand"]

[badges]
appveyor = { repository = "gnzlbg/cargo-asm" }
travis-ci = { repository = "gnzlbg/cargo-asm" }
is-it-maintained-issue-resolution = { repository = "gnzlbg/cargo-asm" }
is-it-maintained-open-issues = { repository = "gnzlbg/cargo-asm" }
maintenance = { status = "experimental" }

[[bin]]
name = "cargo-asm"
path = "src/main.rs"

[[bin]]
name = "cargo-llvm-ir"
path = "src/main.rs"

[dependencies]
edit-distance = "2.1"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.9"
platforms = "0.2"
rustc-demangle = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
termcolor = "1.0"
walkdir = "2.2"
toml = "0.5"

[dev-dependencies]
assert_cli = "0.6"
